--- a/english.tex
+++ b/english.tex
@@ -63,37 +63,46 @@
 %\cvline{Marital status}{married}
 \cvline{Gender}{Male}
 
-\section{Data Scientist}
-\cvline{03/2019 - today}{Data Scientist at \textit{Siemens AG - Digital Industries}}
-\subsection{Customer Facing Data Scientist for Proof of Concepts}
-\cvlistitem{productive anomaly detection application for depaneling machines}
-\cvlistitem{productive statistical test reduction application for end of line test for electrical drives}
-\cvlistitem{productive anomaly detection application for a kodak printer used in the production line of feminine hygiene products}
-\cvlistitem{productive statistical analysis application for maximizing body paintshop line utilization and finding failure root causes}
-\cvlistitem{design of experiment for optimizing printer settings for printed circuit board production}
-\cvlistitem{process optimization for the production of semolina}
-
-\subsection{Projects with Focus on Machine Learning Operations}
-\cvlistitem{development of monitoring algorithms for an energy cost reducing \textit{model predictive control application} in office buildings}
-\cvlistitem{development of monitoring algorithms for a welding point virtual testing model}
-\cvlistitem{operationalizing a false call reduction algorithm running on Siemens Industral Edge for a surface mount technology production line}
+\section{Siemens AG}
+\cvline{08/2023 - Present}{Applied Research Scientist at \textit{Siemens AG - Technology}}
+\subsection{Senior Key Expert for Industrial Machine Learning Operations}
+\cvlistitem{Lead Data Scientist for Machine Learning Operations (MLOps) projects, supporting external Food \& Beverage industry customers}
+\cvlistitem{Developer of runtime code for data-driven applications deployed on Industrial Edge Devices}
+\cvlistitem{Design and development of a framework for trustworthy AI at \textit{Siemens AG}}
 
 \subsection{Product Portfolio Development}
-\cvlistitem{AI Operations Services for machine learning solutions running on Siemens Industrial Edge devices}
-\cvlistitem{python SDK extension for generalizable quality monitoring of tabular data on Siemens Industrial Edge}
-\cvlistitem{customer and problem hypothesis validation}
-\newpage
-\subsection{Additional Tasks}
-\cvlistitem{founding of a data science journal club about trustworthy AI and Machine Learning operations}
-\cvlistitem{organizing of a data science guild to discuss data science projects}
-\cvlistitem{supervision of graduate and undergraduate students}
-\cvlistitem{leading several ideation and scoping workshops for data science use cases}
-\cvlistitem{generating intellectual property (four filed patent applications used in production)}
-\subsection{Main Technologies and Tools}
-\cvlistitem{platforms and ecosystems: Azure ML Studio, AWS Sagemaker, Siemens Industrial Edge}
-\cvlistitem{tools: Python, Visual Studio Code, Pandas, Scikit-Learn, Keras, Matplotlib, Plotly}
+\cvlistitem{Validation of analytical innovation concepts within an Innovation Framework}  
+\cvlistitem{Project Manager for Generative AI pilot initiatives with external customers}  
+\cvlistitem{Product Portfolio Manager for the development of Generative AI assistant applications for the shop floor at \textit{Siemens AG}}  
 
-\section{IT Consultant}
+\cvline{03/2019 - 08/2023}{Data Scientist at \textit{Siemens AG - Digital Industries}}
+\subsection{Customer-Facing Data Science}
+\cvlistitem{Anomaly detection for depaneling machines, Kodak printers (feminine hygiene production), and SMT production lines}
+\cvlistitem{Statistical test reduction for end-of-line testing of electrical drives}
+\cvlistitem{Root cause analysis and process optimization for paint shop utilization, PCB printing, and semolina production}
+
+\subsection{Machine Learning Operations (MLOps)}
+\cvlistitem{Monitoring algorithms for energy-efficient \textit{model predictive control} in office buildings}
+\cvlistitem{Monitoring algorithms for virtual testing of welding points}
+\cvlistitem{Operationalizing a false call reduction algorithm on Siemens Industrial Edge}
+
+\subsection{Product Portfolio Development}
+\cvlistitem{AI Operations Services for ML solutions on Siemens Industrial Edge}
+\cvlistitem{Python SDK extension for quality monitoring of tabular data}
+\cvlistitem{Customer and problem hypothesis validation}
+
+\subsection{Additional Responsibilities}
+\cvlistitem{Founder of a data science journal club on Trustworthy AI and MLOps}
+\cvlistitem{Supervision of graduate and undergraduate students}
+\cvlistitem{Facilitation of ideation and scoping workshops for data science use cases}
+\cvlistitem{Intellectual property generation (four filed patents in production use)}
+
+\subsection{Technologies and Tools}
+\cvlistitem{Platforms: Azure ML Studio, AWS SageMaker, Siemens Industrial Edge}
+\cvlistitem{Tools: Python, VS Code, Pandas, Scikit-Learn, Keras, Matplotlib, Plotly}
+
+
+\section{IT Consultant - Synvert}
 \cvline{02/2017 - 12/2018}{Consultant for Big Data and Data Science at \textit{saracus consulting GmbH}}
 
 \subsection{Tasks}
@@ -149,7 +158,7 @@
 \cvline{Emphasis}{Theoretical solid state physics}
 \cvline{Supervisor}{Prof.\,Dr.\,Kuhn}
 \cvline{Minor}{Philosophy (logic and metaphysics)}
-\newpage
+%\newpage
 \section{School Education}
 \cvline{8/2003 - 7/2007}{Secondary school \textit{Städtisches Heriburg-Gymnasium in Coesfeld}; \emph{\textit{Abitur}-Grade: 2.7}}
 \cvline{8/1998 - 7/2003}{Secondary school \textit{Städtisches Gymnasium Nepomucenum in Coesfeld}}
