--- a/english.tex
+++ b/english.tex
@@ -65,54 +65,82 @@
 
 \section{Siemens AG}
 \cvline{08/2023 - Present}{Applied Research Scientist at \textit{Siemens AG - Technology}}
-\subsection{Senior Key Expert for Industrial Machine Learning Operations}
-\cvlistitem{Lead Data Scientist for Machine Learning Operations (MLOps) projects, supporting external Food \& Beverage industry customers}
-\cvlistitem{Developer of runtime code for data-driven applications deployed on Industrial Edge Devices}
-\cvlistitem{Design and development of a framework for trustworthy AI at \textit{Siemens AG}}
-
+{
+\subsection{Industrial Machine Learning Operations}
+\cvlistitem{Leading MLOps projects for key customers in the Food \& Beverage industry.}
+\cvlistitem{Developing and deploying runtime code for data-driven applications on Siemens Industrial Edge devices.}
+% \cvlistitem{Designing and implementing a corporate-wide framework for Trustworthy AI.}
+\cvlistitem{Applying expert software development practices (CI/CD, coding standards) in a hands-on data science role.}
 \subsection{Product Portfolio Development}
-\cvlistitem{Validation of analytical innovation concepts within an Innovation Framework}  
-\cvlistitem{Project Manager for Generative AI pilot initiatives with external customers}  
-\cvlistitem{Product Portfolio Manager for the development of Generative AI assistant applications for the shop floor at \textit{Siemens AG}}  
+\cvlistitem{Managing the product portfolio for a cloud-based Generative AI assistant for industrial applications.}
+\cvlistitem{Overseeing the full product lifecycle, including roadmap and release planning, ensuring compliance with Siemens standards.}
+\cvlistitem{Developing visionary yet pragmatic product roadmaps and feasible requirements.}
+\cvlistitem{Leading Generative AI pilot projects with external customers.}
+\cvlistitem{Acting as a key customer liaison, providing AI consultancy and gathering product feedback.}
+
 
 \cvline{03/2019 - 08/2023}{Data Scientist at \textit{Siemens AG - Digital Industries}}
+% \subsection{Customer-Facing Data Science}
+% \cvlistitem{Anomaly detection for depaneling machines, Kodak printers (feminine hygiene production), and SMT production lines}
+% \cvlistitem{Statistical test reduction for end-of-line testing of electrical drives}
+% \cvlistitem{Root cause analysis and process optimization for paint shop utilization, PCB printing, and semolina production}
+
 \subsection{Customer-Facing Data Science}
-\cvlistitem{Anomaly detection for depaneling machines, Kodak printers (feminine hygiene production), and SMT production lines}
-\cvlistitem{Statistical test reduction for end-of-line testing of electrical drives}
-\cvlistitem{Root cause analysis and process optimization for paint shop utilization, PCB printing, and semolina production}
+\cvlistitem{Recognized as the go-to expert for high-stakes projects with demanding (external) customers, consistently delivering solutions with high success rates and exceptional satisfaction.}
+\cvlistitem{Delivered robust anomaly detection solutions for critical industrial assets (depaneling machines, printers, SMT lines), directly impacting production quality.}
+\cvlistitem{Engineered statistical test reduction for electrical drive end-of-line testing, optimizing manufacturing efficiency and cost.}
+\cvlistitem{Performed end-to-end root cause analysis and process optimization for complex production environments (paint shops, PCB printing, semolina production).}
+
+
+% \subsection{Machine Learning Operations (MLOps)}
+% \cvlistitem{Monitoring algorithms for energy-efficient \textit{model predictive control} in office buildings}
+% \cvlistitem{Monitoring algorithms for virtual testing of welding points}
+% \cvlistitem{Operationalizing a false call reduction algorithm on Siemens Industrial Edge}
 
 \subsection{Machine Learning Operations (MLOps)}
-\cvlistitem{Monitoring algorithms for energy-efficient \textit{model predictive control} in office buildings}
-\cvlistitem{Monitoring algorithms for virtual testing of welding points}
-\cvlistitem{Operationalizing a false call reduction algorithm on Siemens Industrial Edge}
+\cvlistitem{Drove a high conversion rate of Proof-of-Concepts (PoCs) to fully operationalized production solutions.}
+\cvlistitem{Developed and deployed monitoring algorithms for critical systems, including energy-efficient model predictive control in buildings and virtual weld testing.}
+\cvlistitem{Spearheaded the successful operationalization of a key false call reduction algorithm, a major value-add for customers.}
 
-\subsection{Product Portfolio Development}
-\cvlistitem{AI Operations Services for ML solutions on Siemens Industrial Edge}
-\cvlistitem{Python SDK extension for quality monitoring of tabular data}
-\cvlistitem{Customer and problem hypothesis validation}
+\subsection{Product Development \& Technical Leadership}
+\cvlistitem{Defined and developed "AI Operations Services" to manage the lifecycle of ML solutions.}
+\cvlistitem{Architected and delivered a Python SDK extension for automated quality monitoring of tabular data.}
+\cvlistitem{Led customer and problem hypothesis validation to ensure product-market fit for new AI solutions.}
+% \cvlistitem{Authored four patents, now implemented and in active production use.}
+\cvlistitem{Facilitated high-level ideation and scoping workshops for strategic data science initiatives.}
+\cvlistitem{Founded and led a data science journal club on Trustworthy AI and MLOps.}
+\cvlistitem{Supervised and mentored graduate and undergraduate students.}
 
-\subsection{Additional Responsibilities}
-\cvlistitem{Founder of a data science journal club on Trustworthy AI and MLOps}
-\cvlistitem{Supervision of graduate and undergraduate students}
-\cvlistitem{Facilitation of ideation and scoping workshops for data science use cases}
-\cvlistitem{Intellectual property generation (four filed patents in production use)}
+% \subsection{Product Portfolio Development}
+% \cvlistitem{AI Operations Services for ML solutions on Siemens Industrial Edge}
+% \cvlistitem{Python SDK extension for quality monitoring of tabular data}
+% \cvlistitem{Customer and problem hypothesis validation}
 
-\subsection{Technologies and Tools}
-\cvlistitem{Platforms: Azure ML Studio, AWS SageMaker, Siemens Industrial Edge}
-\cvlistitem{Tools: Python, VS Code, Pandas, Scikit-Learn, Keras, Matplotlib, Plotly}
+% \subsection{Additional Responsibilities}
+% \cvlistitem{Founder of a data science journal club on Trustworthy AI and MLOps}
+% \cvlistitem{Supervision of graduate and undergraduate students}
+% \cvlistitem{Facilitation of ideation and scoping workshops for data science use cases}
+% \cvlistitem{Intellectual property generation (four filed patents in production use)}
+
+% \subsection{Technologies and Tools}
+% \cvlistitem{Platforms: Azure ML Studio, AWS SageMaker, Siemens Industrial Edge}
+% \cvlistitem{Tools: Python, VS Code, Pandas, Scikit-Learn, Keras, Matplotlib, Plotly}
 
 
 \section{IT Consultant - Synvert}
 \cvline{02/2017 - 12/2018}{Consultant for Big Data and Data Science at \textit{saracus consulting GmbH}}
 
 \subsection{Tasks}
-\cvlistitem{projects with focus on Data Science and Data Engineering for insurance companies}
-\cvlistitem{cluster computing with Cloudera CDH and Hortonworks HDP}
-\cvlistitem{leading data science, data engineering and cluster administration workshops for customers}
-\cvlistitem{supervision of student seminars in collaboration with the \textit{Westfälische Wilhelms-Universität Münster}}
-\subsection{Main Technologies and Tools}
-\cvlistitem{platforms: AWS, Cloudera and Hortonworks}
-\cvlistitem{tools: Spark, Hive, Impala, Sqoop, Python, Pandas, Scikit-Learn and Keras}
+{
+\cvlistitem{Spearheaded the growth and development of the company's internal data science team.}
+\cvlistitem{Executed end-to-end data science and data engineering projects for major insurance clients.}
+\cvlistitem{Administered and utilized enterprise-level big data clusters (Cloudera CDH, Hortonworks HDP).}
+\cvlistitem{Led technical workshops for customers on data science, data engineering, and cluster administration.}
+\cvlistitem{Supervised student seminars in collaboration with the \emph{Westfälische Wilhelms-Universität Münster}.}
+}
+% \subsection{Main Technologies and Tools}
+% \cvlistitem{platforms: AWS, Cloudera and Hortonworks}
+% \cvlistitem{tools: Spark, Hive, Impala, Sqoop, Python, Pandas, Scikit-Learn and Keras}
 
 \section{Research Assistant \& PhD Student (Academic degree:\,Dr.\,rer.\,nat.)}
 \cvline{12/2012 - 12/2016}{Research assistant and PhD student for theoretical particle physics at the \textit{Westfälische Wilhelms-Universität Münster}}
@@ -173,15 +201,15 @@
 
 \section{Technical Skills}
 \cvline{Programming languages}{Python (professional), C/C++ (advanced), R (basics), Java (basics), Scala (basics), Fortran(basics) and Shell (basics)}
-\cvline{Software-Tools and Frameworks} {Mathematica, Spark, Hive, Sqoop, several Python libraries for machine learning like  Keras, Tensorflow, Sklearn, Pandas, Matplotlib and Seaborn, \LaTeX, Gnuplot and MS-Office}
-\cvline{Hadoop Distributions}{Cloudera CDH and Hortonworks HDP}
+\cvline{Software-Tools and Frameworks} {Gitlab, Mathematica, Spark, Hive, Sqoop, MlFlow, Keras, Tensorflow, Sklearn, Pandas, Matplotlib and Seaborn, \LaTeX, Gnuplot and MS-Office}
+\cvline{Ecosystems and Big Data Platforms}{Amazon Web Services, Microsoft Azure, Databricks, Siemens Industrial Edge, Cloudera CDH and Hortonworks HDP}
 \cvline{Operating Systems}{Windows and Unix-based systems}
-\cvline{Platforms and Ecosystems}{Amazon Web Services, Microsoft Azure and Siemens Industrial Edge}
 
-\section{Certificates}
-\cvline{04/2017}{CCA Spark and Hadoop Developer}
-\cvline{05/2017}{Cloudera Certified Administrator for Apache Hadoop (CCAH)}
-\cvline{05/2018}{MIT Professional Education - Internet of Things: Roadmap to a Connected World}
+
+% \section{Certificates}
+% \cvline{04/2017}{CCA Spark and Hadoop Developer}
+% \cvline{05/2017}{Cloudera Certified Administrator for Apache Hadoop (CCAH)}
+% \cvline{05/2018}{MIT Professional Education - Internet of Things: Roadmap to a Connected World}
 
 
 
